2008-06-23  Andreas Färber  <andreas.faerber@web.de>

	* data/Makefile.am (EXTRA_DIST): Distribute mono.d.

	Contributed unter MIT/X11 license.

2008-06-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove -D_FILE_OFFSET_BITS=64 from the CPPFLAGS passed to
	libgc on sparc. Fixes #323138.

2008-06-05  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Add configure option for DTrace.
	* dtrace-prelink.sh: New file, helper script for DTrace builds.
	* data/mono.d: New file, defines the DTrace 'mono' provider.

	Contributed unter MIT/X11 license.

2008-05-31  Andreas Färber  <andreas.faerber@web.de>

	* configure.in (big-arrays): Output fix.
	  Display "no" in absence of --enable-big-arrays.

	Contributed unter MIT/X11 license.

2008-05-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* configure.in: Add configure option for big arrays.

	  Patch by Luis F. Ortiz.
	  Contributed under X11 license.
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-May/027995.html

2008-05-23  Wade Berrier  <wberrier@novell.com>

	* scripts/Makefile.am: remove mbas script since we don't ship it anymore
	(fixed bnc#393903)

2008-05-22 Marek Safar  <marek.safar@gmail.com>

	* Makefile.am: Distribute 2.0 profile specific files.

2008-05-21  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4: New file, contains a snapshot of dolt.

	* configure.in: Add support for the DOLT libtool replacement.

2008-05-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Change the way CPPFLAGS/CFLAGS are passed to libgc one more
	time. This time, we collect them in two variables and pass these to libgc
	configure instead of using the standard CPPFLAGS/CFLAGS, to prevent problems
	during reconfiguring. Also pass '-mno-tls-direct-segment-refs' to libgc 
	configure, hopefully fixing #385006.

2008-05-15  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a check for sgen and __thread. Fixes #347171.

2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>
